k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-quarkus-app
  namespace: NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-quarkus-app
  template:
    metadata:
      labels:
        app: my-quarkus-app
    spec:
      containers:
        - name: my-quarkus-app
          image: IMAGE_NAME:VERSION
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
