k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-quarkus-app
  namespace: NAMESPACE
  labels:
    app: my-quarkus-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: my-quarkus-app
