k8s/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-quarkus-app
  namespace: NAMESPACE
spec:
  hosts: NAMESPACE
  http:
  - match:
    - uri:
        prefix: "/"
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80 
        host: NAMESPACE
